              CHANGES IN seqdist2 VERSION 0.9-2 [2016-12-01]

BUG FIXES
  o seqdistOO: A badly specified test hindered the use of
        methods CHI2 and EUCLID. Fixed
  o seqcost: When one of the methods "INDELS", "INDELSLOG", or
        "FEATURES" was used with with.missing=TRUE, bad messages
        regarding substitution costs for missing were displayed.
  o seqcost: New argument miss.cost.fixed to indicate that the
        substitution cost for missing is set as the miss.cost
        value. (Generalizes former miss.trate that is now deprecated)
  o seqcost: Arguments state.prop, prop.weights and prop.type renamed
        as state.features, feature.weights and feature.type. 
      
MISC  
  o Fixed typos in and updated references help pages.

              CHANGES IN seqdist2 VERSION 0.9-1 [2015-11-16]

New Functions
  o seqcost: proposes different ways of computing substitution
        (sm) and indel costs;
        returns a list with the two elements sm and indel.
  o seqsubm: alias of seqcost that returns only the substitution costs.
  o seqdist: new error message when 'refseq' is a state sequence object
      with an alphabet assigned to it different from that of 'seqdata'.

BUG FIXES
  o seqsubm, seqcost: option FUTURE wrongly returned a squared
        Chi-squared distance. This is now fixed.
  o seqdistOO: Now tests that a non NA value is provided
        for sm when method="OM".
  o seqdistOO: Restriction on the way to specify reference sequence
        as this was causing problem with some distance measures.
        Currently, it can only be the index of one of the
        sequence in the data.
  o SVRspell: Now SVRspell can compute distances to the NULL sequence
              (ie. a sequence of length 0)

              CHANGES IN seqdist2 VERSION 0.9

  o First development release